[package]
name = "ngao"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
base64 = "0.22.1"
bcrypt = "0.17.0"
bincode = "1.3.3"
chacha20poly1305 = "0.10.1"
chrono = "0.4.41"
dotenvy = "0.15.7"
futures = "0.3.31"
log = "0.4.27"
pasetors = "0.7.4"
rbatis = "4.6.8"
rbdc-pg = "4.6.2"
rbs = "4.6.2"
rust-argon2 = "2.1.0"
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
sha2 = "0.10.8"
tar = "0.4.44"
thiserror = "2.0.12"
tokio = "1.45.0"
